--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-EMAIL_HOST           = 'smtp.gmail.com'  # Replace with your email provider's SMTP server or leave if using gmail
+EMAIL_HOST           = 'smtp.gmail.com'  
 EMAIL_PORT           = 587  # Typically 587 for TLS
 EMAIL_USE_TLS        = True  # Enable TLS encryption
 EMAIL_HOST_USER      =  # Your email address
